--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -4,6 +4,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+
   }
   
   .profile-content {
@@ -12,13 +13,15 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     overflow: hidden;
     width: 90%;
-    max-width: 800px;
+
     margin: 20px;
+    margin-top: 4.25rem ;
+
   }
   
   .profile-cover {
     position: relative;
-    height: 300px;
+    height: 12.5rem;
     background: url('../../assets/coverP.jpg') no-repeat center center;
     background-size: cover;
   }
